--- a/lang/ar.json
+++ b/lang/ar.json
@@ -221,6 +221,7 @@
   "Attach": "إرفاق",
   "At which time should we send the notification, when the reminder occurs?": "في أي وقت يجب أن نرسل الإشعار عند حدوث التذكير؟",
   "Audio-only call": "مكالمة صوتية فقط",
+  "Authenticate using your password:": "المصادقة باستخدام كلمة المرور الخاصة بك:",
   "Auto saved a few seconds ago": "تم الحفظ تلقائيًا قبل بضع ثوانٍ",
   "Available modules:": "الوحدات المتاحة:",
   "Avatar": "الصورة الرمزية",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "مقارنة بـ Monica:",
   "Configure how we should notify you": "قم بتكوين الطريقة التي يجب أن نخطرك بها",
   "Confirm": "تأكيد",
+  "Confirm access": "تأكيد الوصول",
   "Confirm Password": "تأكيد كلمة المرور",
+  "Confirm your passkey": "تأكد من مفتاح المرور الخاص بك",
   "Conflict": "تعارض",
   "Connect": "اتصال",
   "Connected": "متصل",
@@ -496,7 +499,7 @@
   "Forbidden": "محظور",
   "Forgot your password?": "نسيت كلمة المرور؟",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "نسيت كلمة المرور؟ لا توجد مشكلة. ما عليك سوى إخبارنا بعنوان بريدك الإلكتروني وسنرسل لك عبره رابط إعادة تعيين كلمة المرور الذي سيسمح لك باختيار كلمة مرور جديدة.",
-  "For your security, please confirm your password to continue.": "لحمايتك، يرجى تأكيد كلمة المرور الخاصة بك للمتابعة.",
+  "For your security, please confirm the access to continue.": "من أجل أمنك ، يرجى تأكيد الوصول إلى المتابعة.",
   "Found": "تم العثور",
   "Friday": "جمعة",
   "Friend": "صديق",
@@ -1349,6 +1352,7 @@
   "View log": "سجل عرض",
   "View on map": "عرض على الخريطة",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "انتظر بضع ثواني حتى تتعرف Monica (التطبيق) عليك. سنرسل إليك إشعارًا مزيفًا لمعرفة ما إذا كان يعمل أم لا.",
+  "Waiting for input from browser interaction…": "في انتظار مدخلات من تفاعل المتصفح ...",
   "Waiting for key…": "في انتظار المفتاح...",
   "Walked": "مشى",
   "Wallpaper": "ورق الجدران",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "عند تمكين المصادقة الثنائية، ستتم مطالبتك برمز آمن وعشوائي أثناء المصادقة. يمكنك الحصول على هذا الرمز من تطبيق Google Authenticator بهاتفك.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "عند تمكين المصادقة الثنائية، سيُطلب منك رمزًا آمنًا وعشوائيًا أثناء المصادقة. يمكنك استرداد هذا الرمز المميز من تطبيق Authenticator بهاتفك.",
   "When was the loan made?": "متى تم القرض؟",
+  "When you are ready, authenticate using the button below:": "عندما تكون جاهزًا ، قم بالتوثيق باستخدام الزر أدناه:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "عندما تحدد علاقة بين جهتي اتصال، على سبيل المثال علاقة الأب والابن، تقوم Monica بإنشاء علاقتين، واحدة لكل جهة اتصال:",
   "Which email address should we send the notification to?": "ما هو عنوان البريد الإلكتروني الذي يجب أن نرسل الإشعار إليه؟",
   "Who called?": "الذي اتصل؟",
