--- a/lang/ca.json
+++ b/lang/ca.json
@@ -221,6 +221,7 @@
   "Attach": "Adjuntar",
   "At which time should we send the notification, when the reminder occurs?": "A quina hora hem d’enviar la notificació, quan es produeix el recordatori?",
   "Audio-only call": "Trucada només d’àudio",
+  "Authenticate using your password:": "Autentica amb la teva contrasenya:",
   "Auto saved a few seconds ago": "Desat automàticament fa uns segons",
   "Available modules:": "Mòduls disponibles:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "En comparació amb la Monica:",
   "Configure how we should notify you": "Configureu com us hem de notificar",
   "Confirm": "Confirmar",
+  "Confirm access": "Confirmeu l’accés",
   "Confirm Password": "Confirmar contrasenya",
+  "Confirm your passkey": "Confirmeu la vostra clau de pas",
   "Conflict": "Conflicte",
   "Connect": "Connecta’t",
   "Connected": "Connectat",
@@ -496,7 +499,7 @@
   "Forbidden": "Prohibit",
   "Forgot your password?": "Heu oblidat la vostra contrasenya?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Heu oblidat la vostra contrasenya? Cap problema. Només fer-nos saber la vostra adreça electrònica i us enviarem un enllaç per restablir la contrasenya que us permetrà triar-ne una de nova.",
-  "For your security, please confirm your password to continue.": "Per a la seva seguretat, si us plau, confirmeu la vostra contrasenya per a continuar.",
+  "For your security, please confirm the access to continue.": "Per obtenir la vostra seguretat, confirmeu l’accés per continuar.",
   "Found": "Trobat",
   "Friday": "divendres",
   "Friend": "Amic",
@@ -1349,6 +1352,7 @@
   "View log": "Veure el registre",
   "View on map": "Veure al mapa",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Espereu uns segons perquè la Monica (l’aplicació) us reconegui. T’enviarem una notificació falsa per veure si funciona.",
+  "Waiting for input from browser interaction…": "Esperant l’entrada de la interacció del navegador ...",
   "Waiting for key…": "Esperant la clau...",
   "Walked": "Caminat",
   "Wallpaper": "Fons de pantalla",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Quan el factor d’autenticació en dos passos està habilitat, se us demanarà un token segur i aleatori durant l’autenticació. Podeu recuperar aquest token des del vostre telèfon de l’aplicació Google Authenticator.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Quan l’autenticació de dos factors està habilitada, se us demanarà un testimoni aleatori i segur durant l’autenticació. Podeu recuperar aquest testimoni des de l’aplicació Authenticator del vostre telèfon.",
   "When was the loan made?": "Quan es va fer el préstec?",
+  "When you are ready, authenticate using the button below:": "Quan estigueu a punt, autentiqueu -lo amb el botó següent:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Quan definiu una relació entre dos contactes, per exemple, una relació pare-fill, la Monica crea dues relacions, una per a cada contacte:",
   "Which email address should we send the notification to?": "A quina adreça electrònica hem d’enviar la notificació?",
   "Who called?": "Qui ha trucat?",
