--- a/lang/de.json
+++ b/lang/de.json
@@ -221,6 +221,7 @@
   "Attach": "Anhängen",
   "At which time should we send the notification, when the reminder occurs?": "Zu welchem Zeitpunkt sollen wir die Benachrichtigung versenden, wenn die Erinnerung erfolgt?",
   "Audio-only call": "Nur-Audio-Anruf",
+  "Authenticate using your password:": "Authentifizieren Sie mit Ihrem Passwort:",
   "Auto saved a few seconds ago": "Vor ein paar Sekunden automatisch gespeichert",
   "Available modules:": "Verfügbare Module:",
   "Avatar": "Benutzerbild",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Im Vergleich zu Monica:",
   "Configure how we should notify you": "Konfigurieren Sie, wie wir Sie benachrichtigen sollen",
   "Confirm": "Bestätigen",
+  "Confirm access": "Zugriff bestätigen",
   "Confirm Password": "Passwort bestätigen",
+  "Confirm your passkey": "Bestätigen Sie Ihren Passkey",
   "Conflict": "Konflikt",
   "Connect": "Verbinden",
   "Connected": "In Verbindung gebracht",
@@ -496,7 +499,7 @@
   "Forbidden": "Verboten",
   "Forgot your password?": "Passwort vergessen?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Haben Sie Ihr Passwort vergessen? Kein Problem. Teilen Sie uns einfach Ihre E-Mail-Adresse mit und wir senden Ihnen per E-Mail einen Link zum Zurücksetzen des Passworts, über den Sie ein Neues auswählen können.",
-  "For your security, please confirm your password to continue.": "Um fortzufahren, bestätigen Sie zu Ihrer Sicherheit bitte Ihr Passwort.",
+  "For your security, please confirm the access to continue.": "Für Ihre Sicherheit bestätigen Sie bitte den Zugriff, um fortzufahren.",
   "Found": "Gefunden",
   "Friday": "Freitag",
   "Friend": "Freund",
@@ -1349,6 +1352,7 @@
   "View log": "Protokoll ansehen",
   "View on map": "Auf der Karte anzeigen",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Warten Sie ein paar Sekunden, bis Monica (die Anwendung) Sie erkennt. Wir senden Ihnen eine gefälschte Benachrichtigung, um zu sehen, ob es funktioniert.",
+  "Waiting for input from browser interaction…": "Warten auf Eingabe von Browser -Interaktion…",
   "Waiting for key…": "Warten auf den Schlüssel…",
   "Walked": "Ging",
   "Wallpaper": "Hintergrund",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Wenn die Zwei-Faktor-Authentifizierung aktiviert ist, werden Sie während der Authentifizierung zur Eingabe eines sicheren, zufälligen Tokens aufgefordert. Sie können dieses Token in der Google Authenticator-Anwendung Ihres Telefons abrufen.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Wenn die Zwei-Faktor-Authentifizierung aktiviert ist, werden Sie während der Authentifizierung zur Eingabe eines sicheren, zufälligen Tokens aufgefordert. Sie können dieses Token über die Authenticator-Anwendung Ihres Telefons abrufen.",
   "When was the loan made?": "Wann wurde der Kredit gewährt?",
+  "When you are ready, authenticate using the button below:": "Wenn Sie bereit sind, authentifizieren Sie sich mit der folgenden Schaltfläche:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Wenn Sie eine Beziehung zwischen zwei Kontakten definieren, beispielsweise eine Vater-Sohn-Beziehung, erstellt Monica zwei Beziehungen, eine für jeden Kontakt:",
   "Which email address should we send the notification to?": "An welche E-Mail-Adresse sollen wir die Benachrichtigung senden?",
   "Who called?": "Wer hat angerufen?",
