--- a/lang/he.json
+++ b/lang/he.json
@@ -221,6 +221,7 @@
   "Attach": "צרף",
   "At which time should we send the notification, when the reminder occurs?": "באיזו שעה עלינו לשלוח את ההודעה, כאשר התזכורת מתרחשת?",
   "Audio-only call": "שיחת שמע בלבד",
+  "Authenticate using your password:": "אימות באמצעות הסיסמה שלך:",
   "Auto saved a few seconds ago": "נשמר אוטומטית לפני כמה שניות",
   "Available modules:": "מודולים זמינים:",
   "Avatar": "גִלגוּל",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "בהשוואה ל-Monica:",
   "Configure how we should notify you": "הגדר כיצד עלינו להודיע לך",
   "Confirm": "אישור",
+  "Confirm access": "אשר את הגישה",
   "Confirm Password": "אימות סיסמה",
+  "Confirm your passkey": "אשר את המפתח שלך",
   "Conflict": "סְתִירָה",
   "Connect": "לְחַבֵּר",
   "Connected": "מְחוּבָּר",
@@ -496,7 +499,7 @@
   "Forbidden": "אסור",
   "Forgot your password?": "שכחת את הסיסמה שלך?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "שכחת את הסיסמה שלך? אין בעיה. רק תודיע לנו את כתובת הדוא \" ל שלך ואנו נשלח לך קישור איפוס סיסמה שיאפשר לך לבחור אחד חדש.",
-  "For your security, please confirm your password to continue.": "למען ביטחונכם, אנא אשרו את סיסמתכם להמשך.",
+  "For your security, please confirm the access to continue.": "לצורך האבטחה שלך, אנא אשר את הגישה להמשך.",
   "Found": "מצאתי",
   "Friday": "יוֹם שִׁישִׁי",
   "Friend": "חבר",
@@ -1349,6 +1352,7 @@
   "View log": "צפה בלוג",
   "View on map": "צפה במפה",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "המתן מספר שניות עד שMonica (האפליקציה) תזהה אותך. אנו נשלח לך הודעה מזויפת כדי לראות אם זה עובד.",
+  "Waiting for input from browser interaction…": "מחכה לקלט מאינטראקציה בין דפדפן ...",
   "Waiting for key…": "מחכה למפתח...",
   "Walked": "הלך",
   "Wallpaper": "טפט",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "כאשר אימות שני גורמים מופעל, תתבקש לקבל אסימון מאובטח ואקראי במהלך האימות. אתה יכול לאחזר אסימון זה מיישום Google Authenticator של הטלפון שלך.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "כאשר אימות שני גורמים מופעל, תתבקש להזין אסימון מאובטח ואקראי במהלך האימות. אתה יכול לאחזר את האסימון הזה מאפליקציית המאמת של הטלפון שלך.",
   "When was the loan made?": "מתי בוצעה ההלוואה?",
+  "When you are ready, authenticate using the button below:": "כשאתה מוכן, אימת באמצעות הכפתור למטה:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "כאשר אתה מגדיר מערכת יחסים בין שני אנשי קשר, למשל מערכת יחסים של אב ובן, Monica יוצרת שני קשרים, אחד לכל איש קשר:",
   "Which email address should we send the notification to?": "לאיזו כתובת אימייל עלינו לשלוח את ההודעה?",
   "Who called?": "מי התקשר?",
