--- a/lang/ml.json
+++ b/lang/ml.json
@@ -221,6 +221,7 @@
   "Attach": "അറ്റാച്ചുചെയ്യുക",
   "At which time should we send the notification, when the reminder occurs?": "ഓർമ്മപ്പെടുത്തൽ സംഭവിക്കുമ്പോൾ ഏത് സമയത്താണ് ഞങ്ങൾ അറിയിപ്പ് അയയ്‌ക്കേണ്ടത്?",
   "Audio-only call": "ഓഡിയോ-മാത്രം കോൾ",
+  "Authenticate using your password:": "നിങ്ങളുടെ പാസ്വേഡ് ഉപയോഗിച്ച് പ്രാമാണീകരിക്കുക:",
   "Auto saved a few seconds ago": "കുറച്ച് സെക്കൻഡുകൾക്ക് മുമ്പ് സ്വയമേവ സംരക്ഷിച്ചു",
   "Available modules:": "ലഭ്യമായ മൊഡ്യൂളുകൾ:",
   "Avatar": "അവതാർ",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monicaയുമായി താരതമ്യം ചെയ്യുമ്പോൾ:",
   "Configure how we should notify you": "ഞങ്ങൾ നിങ്ങളെ എങ്ങനെ അറിയിക്കണമെന്ന് കോൺഫിഗർ ചെയ്യുക",
   "Confirm": "സ്ഥിരീകരിക്കുക",
+  "Confirm access": "ആക്സസ്സ് സ്ഥിരീകരിക്കുക",
   "Confirm Password": "പാസ്വേഡ് സ്ഥിരീകരിക്കുക",
+  "Confirm your passkey": "നിങ്ങളുടെ പാസ്കീ സ്ഥിരീകരിക്കുക",
   "Conflict": "സംഘർഷം",
   "Connect": "ബന്ധിപ്പിക്കുക",
   "Connected": "ബന്ധിപ്പിച്ചു",
@@ -496,7 +499,7 @@
   "Forbidden": "വിലക്കപ്പെട്ട",
   "Forgot your password?": "നിങ്ങളുടെ പാസ്വേഡ് മറന്നോ?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "നിങ്ങളുടെ പാസ്വേഡ് മറന്നോ? ഒരു പ്രശ്നവുമില്ല. നിങ്ങളുടെ ഇമെയിൽ വിലാസം ഞങ്ങളെ അറിയിക്കുക, പുതിയൊരെണ്ണം തിരഞ്ഞെടുക്കാൻ നിങ്ങളെ അനുവദിക്കുന്ന ഒരു പാസ്‌വേഡ് പുനഃസജ്ജീകരണ ലിങ്ക് ഞങ്ങൾ ഇമെയിൽ ചെയ്യും.",
-  "For your security, please confirm your password to continue.": "നിങ്ങളുടെ സുരക്ഷയ്ക്കായി, തുടരാൻ നിങ്ങളുടെ പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക.",
+  "For your security, please confirm the access to continue.": "നിങ്ങളുടെ സുരക്ഷയ്ക്കായി, തുടരാനുള്ള ആക്സസ് സ്ഥിരീകരിക്കുക.",
   "Found": "കണ്ടെത്തി",
   "Friday": "വെള്ളിയാഴ്ച",
   "Friend": "സുഹൃത്ത്",
@@ -1349,6 +1352,7 @@
   "View log": "ലോഗ് കാണുക",
   "View on map": "മാപ്പിൽ കാണുക",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (അപ്ലിക്കേഷൻ) നിങ്ങളെ തിരിച്ചറിയുന്നതിനായി കുറച്ച് നിമിഷങ്ങൾ കാത്തിരിക്കുക. ഇത് പ്രവർത്തിക്കുന്നുണ്ടോയെന്നറിയാൻ ഞങ്ങൾ നിങ്ങൾക്ക് ഒരു വ്യാജ അറിയിപ്പ് അയയ്ക്കും.",
+  "Waiting for input from browser interaction…": "ബ്ര browser സർ ഇടപെടലിൽ നിന്ന് ഇൻപുട്ടിനായി കാത്തിരിക്കുന്നു ...",
   "Waiting for key…": "താക്കോലിനായി കാത്തിരിക്കുന്നു...",
   "Walked": "നടന്നു",
   "Wallpaper": "വാൾപേപ്പർ",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "രണ്ട് ഘടകങ്ങളുടെ പ്രാമാണീകരണം പ്രവർത്തനക്ഷമമാക്കുമ്പോൾ, പ്രാമാണീകരണ സമയത്ത് സുരക്ഷിതവും ക്രമരഹിതവുമായ ടോക്കണിനായി നിങ്ങളോട് ആവശ്യപ്പെടും. നിങ്ങളുടെ ഫോണിന്റെ Google Authenticator ആപ്ലിക്കേഷനിൽ നിന്ന് നിങ്ങൾക്ക് ഈ ടോക്കൺ വീണ്ടെടുക്കാം.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "രണ്ട് ഘടകങ്ങളുടെ പ്രാമാണീകരണം പ്രവർത്തനക്ഷമമാക്കുമ്പോൾ, പ്രാമാണീകരണ സമയത്ത് സുരക്ഷിതവും ക്രമരഹിതവുമായ ടോക്കണിനായി നിങ്ങളോട് ആവശ്യപ്പെടും. നിങ്ങളുടെ ഫോണിന്റെ ഓതന്റിക്കേറ്റർ ആപ്ലിക്കേഷനിൽ നിന്ന് നിങ്ങൾക്ക് ഈ ടോക്കൺ വീണ്ടെടുക്കാം.",
   "When was the loan made?": "എപ്പോഴാണ് വായ്പ നൽകിയത്?",
+  "When you are ready, authenticate using the button below:": "നിങ്ങൾ തയ്യാറാകുമ്പോൾ, ചുവടെയുള്ള ബട്ടൺ ഉപയോഗിച്ച് പ്രാമാണീകരിക്കുക:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "രണ്ട് കോൺടാക്റ്റുകൾ തമ്മിലുള്ള ബന്ധം നിങ്ങൾ നിർവചിക്കുമ്പോൾ, ഉദാഹരണത്തിന് ഒരു പിതാവ്-മകൻ ബന്ധം, Monica രണ്ട് ബന്ധങ്ങൾ സൃഷ്ടിക്കുന്നു, ഓരോ കോൺടാക്റ്റിനും ഒന്ന്:",
   "Which email address should we send the notification to?": "ഏത് ഇമെയിൽ വിലാസത്തിലാണ് ഞങ്ങൾ അറിയിപ്പ് അയയ്ക്കേണ്ടത്?",
   "Who called?": "ആരാണ് വിളിച്ചത്?",
