--- a/lang/te.json
+++ b/lang/te.json
@@ -221,6 +221,7 @@
   "Attach": "అటాచ్ చేయండి",
   "At which time should we send the notification, when the reminder occurs?": "రిమైండర్ వచ్చినప్పుడు మనం నోటిఫికేషన్‌ను ఏ సమయంలో పంపాలి?",
   "Audio-only call": "ఆడియో-మాత్రమే కాల్",
+  "Authenticate using your password:": "మీ పాస్‌వర్డ్‌ను ఉపయోగించి ప్రామాణీకరించండి:",
   "Auto saved a few seconds ago": "కొన్ని సెకన్ల క్రితం ఆటో సేవ్ చేయబడింది",
   "Available modules:": "అందుబాటులో ఉన్న మాడ్యూల్స్:",
   "Avatar": "అవతార్",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monica పోలిస్తే:",
   "Configure how we should notify you": "మేము మీకు ఎలా తెలియజేయాలో కాన్ఫిగర్ చేయండి",
   "Confirm": "నిర్ధారించండి",
+  "Confirm access": "ప్రాప్యతను నిర్ధారించండి",
   "Confirm Password": "పాస్‌వర్డ్‌ని నిర్ధారించండి",
+  "Confirm your passkey": "మీ పాస్‌కీని నిర్ధారించండి",
   "Conflict": "సంఘర్షణ",
   "Connect": "కనెక్ట్ చేయండి",
   "Connected": "కనెక్ట్ చేయబడింది",
@@ -496,7 +499,7 @@
   "Forbidden": "నిషేధించబడింది",
   "Forgot your password?": "మీ పాస్వర్డ్ మర్చిపోయారా?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "మీ పాస్వర్డ్ మర్చిపోయారా? ఏమి ఇబ్బంది లేదు. మీ ఇమెయిల్ చిరునామాను మాకు తెలియజేయండి మరియు మేము మీకు కొత్త దాన్ని ఎంచుకోవడానికి అనుమతించే పాస్‌వర్డ్ రీసెట్ లింక్‌ను ఇమెయిల్ చేస్తాము.",
-  "For your security, please confirm your password to continue.": "మీ భద్రత కోసం, దయచేసి కొనసాగించడానికి మీ పాస్‌వర్డ్‌ను నిర్ధారించండి.",
+  "For your security, please confirm the access to continue.": "మీ భద్రత కోసం, దయచేసి కొనసాగడానికి ప్రాప్యతను నిర్ధారించండి.",
   "Found": "కనుగొన్నారు",
   "Friday": "శుక్రవారం",
   "Friend": "స్నేహితుడు",
@@ -1349,6 +1352,7 @@
   "View log": "లాగ్ చూడండి",
   "View on map": "మ్యాప్‌లో వీక్షించండి",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (అప్లికేషన్) మిమ్మల్ని గుర్తించడానికి కొన్ని సెకన్లు వేచి ఉండండి. ఇది పని చేస్తుందో లేదో తెలుసుకోవడానికి మేము మీకు నకిలీ నోటిఫికేషన్‌ను పంపుతాము.",
+  "Waiting for input from browser interaction…": "బ్రౌజర్ ఇంటరాక్షన్ నుండి ఇన్పుట్ కోసం వేచి ఉంది…",
   "Waiting for key…": "కీ కోసం వేచి ఉంది…",
   "Walked": "నడిచారు",
   "Wallpaper": "వాల్‌పేపర్",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "రెండు కారకాల ప్రమాణీకరణ ప్రారంభించబడినప్పుడు, ప్రమాణీకరణ సమయంలో మీరు సురక్షితమైన, యాదృచ్ఛిక టోకెన్ కోసం ప్రాంప్ట్ చేయబడతారు. మీరు మీ ఫోన్ యొక్క Google Authenticator అప్లికేషన్ నుండి ఈ టోకెన్‌ని తిరిగి పొందవచ్చు.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "రెండు కారకాల ప్రమాణీకరణ ప్రారంభించబడినప్పుడు, ప్రమాణీకరణ సమయంలో మీరు సురక్షితమైన, యాదృచ్ఛిక టోకెన్ కోసం ప్రాంప్ట్ చేయబడతారు. మీరు మీ ఫోన్ యొక్క Authenticator అప్లికేషన్ నుండి ఈ టోకెన్‌ని తిరిగి పొందవచ్చు.",
   "When was the loan made?": "అప్పు ఎప్పుడు చేశారు?",
+  "When you are ready, authenticate using the button below:": "మీరు సిద్ధంగా ఉన్నప్పుడు, దిగువ బటన్‌ను ఉపయోగించి ప్రామాణీకరించండి:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "మీరు రెండు పరిచయాల మధ్య సంబంధాన్ని నిర్వచించినప్పుడు, ఉదాహరణకు తండ్రి-కొడుకుల సంబంధాన్ని, Monica ప్రతి పరిచయానికి ఒకటిగా రెండు సంబంధాలను సృష్టిస్తుంది:",
   "Which email address should we send the notification to?": "మేము నోటిఫికేషన్‌ను ఏ ఇమెయిల్ చిరునామాకు పంపాలి?",
   "Who called?": "ఎవరు పిలిచారు?",
