--- a/lang/ur.json
+++ b/lang/ur.json
@@ -221,6 +221,7 @@
   "Attach": "منسلک",
   "At which time should we send the notification, when the reminder occurs?": "ہمیں کس وقت نوٹیفکیشن بھیجنا چاہئے، جب یاد دہانی ہوتی ہے؟",
   "Audio-only call": "صرف آڈیو کال",
+  "Authenticate using your password:": "اپنے پاس ورڈ کا استعمال کرتے ہوئے توثیق کریں:",
   "Auto saved a few seconds ago": "چند سیکنڈ پہلے خود بخود محفوظ ہوا۔",
   "Available modules:": "دستیاب ماڈیولز:",
   "Avatar": "اوتار",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monica کے مقابلے:",
   "Configure how we should notify you": "ترتیب دیں کہ ہم آپ کو کیسے مطلع کریں۔",
   "Confirm": "اس بات کی تصدیق",
+  "Confirm access": "رسائی کی تصدیق کریں",
   "Confirm Password": "پاس ورڈ کی توثیق کریں",
+  "Confirm your passkey": "اپنے پاسکی کی تصدیق کریں",
   "Conflict": "تنازعہ",
   "Connect": "جڑیں۔",
   "Connected": "جڑا ہوا",
@@ -496,7 +499,7 @@
   "Forbidden": "حرام",
   "Forgot your password?": "پاسورڈ بھول گئے ؟",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "پاسورڈ بھول گئے ؟  کوئی مسئلہ نہیں. صرف ہمیں پتہ ہے کہ آپ کے ای میل ایڈریس اور ہم نے آپ کو ای میل ایک پاس ورڈ ری سیٹ کریں کے لنک کی اجازت دے گا کہ آپ کو منتخب کرنے کے لئے ایک نئی ایک.",
-  "For your security, please confirm your password to continue.": "آپ کی سیکورٹی کے لئے, براہ مہربانی اس بات کی تصدیق آپ کے پاس ورڈ کے لئے جاری رکھنے کے لئے.",
+  "For your security, please confirm the access to continue.": "آپ کی حفاظت کے ل please ، براہ کرم جاری رکھنے کے لئے رسائی کی تصدیق کریں۔",
   "Found": "ملا",
   "Friday": "جمعہ",
   "Friend": "دوست",
@@ -1349,6 +1352,7 @@
   "View log": "لاگ دیکھیں",
   "View on map": "نقشے پر دیکھیں",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (درخواست) آپ کو پہچاننے کے لیے چند سیکنڈ انتظار کریں۔ ہم آپ کو یہ دیکھنے کے لیے ایک جعلی اطلاع بھیجیں گے کہ آیا یہ کام کرتا ہے۔",
+  "Waiting for input from browser interaction…": "براؤزر کی بات چیت سے ان پٹ کا انتظار…",
   "Waiting for key…": "چابی کا انتظار کر رہا ہے…",
   "Walked": "چہل قدمی کی۔",
   "Wallpaper": "وال پیپر",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "جب دو عنصر کی تصدیق کے چالو حالت میں ہے, آپ کو ہو جائے گا کی حوصلہ افزائی کے لئے ایک محفوظ ، بے ترتیب ٹوکن کے دوران تصدیق. آپ کر سکتے ہیں حاصل یہ ٹوکن کی طرف سے آپ کے فون کی گوگل Authenticator درخواست ہے.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "جب دو عنصر کی توثیق کو فعال کیا جاتا ہے، تو آپ کو تصدیق کے دوران ایک محفوظ، بے ترتیب ٹوکن کے لیے کہا جائے گا۔ آپ اس ٹوکن کو اپنے فون کی Authenticator ایپلیکیشن سے بازیافت کر سکتے ہیں۔",
   "When was the loan made?": "قرض کب دیا گیا؟",
+  "When you are ready, authenticate using the button below:": "جب آپ تیار ہوں تو ، نیچے دیئے گئے بٹن کا استعمال کرتے ہوئے توثیق کریں:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "جب آپ دو رابطوں کے درمیان تعلق کی وضاحت کرتے ہیں، مثال کے طور پر باپ بیٹے کا رشتہ، Monica دو تعلقات بناتی ہے، ایک ہر رابطے کے لیے:",
   "Which email address should we send the notification to?": "ہمیں کس ای میل ایڈریس پر اطلاع بھیجنی چاہیے؟",
   "Who called?": "کس نے بلایا؟",
