--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -221,6 +221,7 @@
   "Attach": "附加",
   "At which time should we send the notification, when the reminder occurs?": "当提醒发生时，我们应该在什么时间发送通知？",
   "Audio-only call": "纯音频通话",
+  "Authenticate using your password:": "使用密码进行身份验证：",
   "Auto saved a few seconds ago": "几秒钟前自动保存",
   "Available modules:": "可用模块：",
   "Avatar": "阿凡达",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "与Monica相比：",
   "Configure how we should notify you": "配置我们如何通知您",
   "Confirm": "确认",
+  "Confirm access": "确认访问",
   "Confirm Password": "确认密码",
+  "Confirm your passkey": "确认您的Passkey",
   "Conflict": "冲突",
   "Connect": "连接",
   "Connected": "连接的",
@@ -496,7 +499,7 @@
   "Forbidden": "访问被拒绝",
   "Forgot your password?": "忘记密码？",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘记密码？没关系。输入您的电子邮件地址，我们将通过电子邮件向您发送密码重置链接，让您重置一个新的密码。",
-  "For your security, please confirm your password to continue.": "为了您的安全，请确认您的密码以继续。",
+  "For your security, please confirm the access to continue.": "为了确保您的安全，请确认继续访问。",
   "Found": "临时移动",
   "Friday": "星期五",
   "Friend": "朋友",
@@ -1349,6 +1352,7 @@
   "View log": "查看日志",
   "View on map": "在地图上查看",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待几秒钟，让Monica（应用程序）认出您。我们会向您发送一条虚假通知，看看它是否有效。",
+  "Waiting for input from browser interaction…": "等待浏览器交互的输入…",
   "Waiting for key…": "等待钥匙...",
   "Walked": "步行",
   "Wallpaper": "墙纸",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "当启用双因素认证时，在认证过程中会提示您输入一个安全的随机令牌。您可以从手机的 Google Authenticator 应用程序中获取此令牌。",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "启用两因素身份验证后，系统将在身份验证过程中提示您输入安全的随机令牌。您可以从手机的身份验证器应用程序中检索此令牌。",
   "When was the loan made?": "贷款是什么时候发放的？",
+  "When you are ready, authenticate using the button below:": "准备就绪时，使用下面的按钮进行身份验证：",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "当您定义两个联系人之间的关系（例如父子关系）时，Monica 会创建两个关系，每个联系人对应一个关系：",
   "Which email address should we send the notification to?": "我们应该将通知发送到哪个电子邮件地址？",
   "Who called?": "谁打来的？",
