--- a/lang/hi.json
+++ b/lang/hi.json
@@ -221,6 +221,7 @@
   "Attach": "संलग्न करें",
   "At which time should we send the notification, when the reminder occurs?": "हमें किस समय अधिसूचना भेजनी चाहिए, जब अनुस्मारक आता है?",
   "Audio-only call": "केवल ऑडियो कॉल",
+  "Authenticate using your password:": "अपने पासवर्ड का उपयोग करके प्रमाणित करें:",
   "Auto saved a few seconds ago": "कुछ सेकंड पहले स्वतः सहेजा गया",
   "Available modules:": "उपलब्ध मॉड्यूल:",
   "Avatar": "अवतार",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monica से तुलना:",
   "Configure how we should notify you": "कॉन्फ़िगर करें कि हमें आपको कैसे सूचित करना चाहिए",
   "Confirm": "पुष्टि करें",
+  "Confirm access": "एक्सेस की पुष्टि करें",
   "Confirm Password": "पासवर्ड की पुष्टि करें",
+  "Confirm your passkey": "अपने पासकी की पुष्टि करें",
   "Conflict": "संघर्ष",
   "Connect": "जोड़ना",
   "Connected": "जुड़े हुए",
@@ -496,7 +499,7 @@
   "Forbidden": "मना किया",
   "Forgot your password?": "अपना पासवर्ड भूल गए?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "अपना पासवर्ड भूल गए? कोई बात नहीं ।  बस हमें अपना ईमेल पता बताएं और हम आपको एक पासवर्ड रीसेट लिंक ईमेल करेंगे जो आपको एक नया चुनने की अनुमति देगा ।",
-  "For your security, please confirm your password to continue.": "अपनी सुरक्षा के लिए, कृपया जारी रखने के लिए अपने पासवर्ड की पुष्टि करें ।",
+  "For your security, please confirm the access to continue.": "अपनी सुरक्षा के लिए, कृपया जारी रखने के लिए पहुंच की पुष्टि करें।",
   "Found": "मिला",
   "Friday": "शुक्रवार",
   "Friend": "दोस्त",
@@ -1349,6 +1352,7 @@
   "View log": "देखें प्रवेश",
   "View on map": "मानचित्र पर देखें",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (एप्लिकेशन) द्वारा आपको पहचानने के लिए कुछ सेकंड प्रतीक्षा करें। यह काम करता है या नहीं यह देखने के लिए हम आपको एक नकली अधिसूचना भेजेंगे।",
+  "Waiting for input from browser interaction…": "ब्राउज़र इंटरैक्शन से इनपुट की प्रतीक्षा में ...",
   "Waiting for key…": "कुंजी की प्रतीक्षा की जा रही है...",
   "Walked": "चला",
   "Wallpaper": "वॉलपेपर",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "जब दो कारक प्रमाणीकरण सक्षम होता है, तो आपको प्रमाणीकरण के दौरान एक सुरक्षित, यादृच्छिक टोकन के लिए संकेत दिया जाएगा ।  आप अपने फोन के गूगल प्रमाणक आवेदन से इस टोकन पुनः प्राप्त कर सकते हैं.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "जब दो कारक प्रमाणीकरण सक्षम होता है, तो प्रमाणीकरण के दौरान आपको एक सुरक्षित, यादृच्छिक टोकन के लिए संकेत दिया जाएगा। आप इस टोकन को अपने फ़ोन के प्रमाणक एप्लिकेशन से पुनः प्राप्त कर सकते हैं।",
   "When was the loan made?": "ऋण कब दिया गया था?",
+  "When you are ready, authenticate using the button below:": "जब आप तैयार हों, तो नीचे दिए गए बटन का उपयोग करके प्रमाणित करें:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "जब आप दो संपर्कों के बीच संबंध को परिभाषित करते हैं, उदाहरण के लिए पिता-पुत्र संबंध, तो Monica दो संबंध बनाती है, प्रत्येक संपर्क के लिए एक:",
   "Which email address should we send the notification to?": "हमें किस ईमेल पते पर अधिसूचना भेजनी चाहिए?",
   "Who called?": "किसने कहा?",
