--- a/lang/vi.json
+++ b/lang/vi.json
@@ -221,6 +221,7 @@
   "Attach": "Gắn",
   "At which time should we send the notification, when the reminder occurs?": "Chúng ta nên gửi thông báo vào thời điểm nào khi lời nhắc xảy ra?",
   "Audio-only call": "Cuộc gọi chỉ có âm thanh",
+  "Authenticate using your password:": "Xác thực bằng cách sử dụng mật khẩu của bạn:",
   "Auto saved a few seconds ago": "Tự động lưu vài giây trước",
   "Available modules:": "Các mô-đun có sẵn:",
   "Avatar": "hình đại diện",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "So với Monica:",
   "Configure how we should notify you": "Định cấu hình cách chúng tôi thông báo cho bạn",
   "Confirm": "Xác nhận",
+  "Confirm access": "Xác nhận quyền truy cập",
   "Confirm Password": "Xác Nhận Mật Khẩu",
+  "Confirm your passkey": "Xác nhận khóa của bạn",
   "Conflict": "Xung Đột",
   "Connect": "Kết nối",
   "Connected": "Đã kết nối",
@@ -496,7 +499,7 @@
   "Forbidden": "Cấm Truy Cập",
   "Forgot your password?": "Quên mật khẩu?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Quên mật khẩu? Không vấn đề gì. Chỉ cần cho chúng tôi biết địa chỉ email của bạn và chúng tôi sẽ gửi cho bạn một liên kết đặt lại mật khẩu qua email cho phép bạn chọn một mật khẩu mới.",
-  "For your security, please confirm your password to continue.": "Để bảo mật cho bạn, vui lòng xác nhận mật khẩu của bạn để tiếp tục.",
+  "For your security, please confirm the access to continue.": "Để bảo mật của bạn, xin vui lòng xác nhận quyền truy cập để tiếp tục.",
   "Found": "Tìm Thấy",
   "Friday": "Thứ sáu",
   "Friend": "Bạn bè",
@@ -1349,6 +1352,7 @@
   "View log": "Xem nhật kí",
   "View on map": "Xem trên bản đồ",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Đợi vài giây để Monica (ứng dụng) nhận ra bạn. Chúng tôi sẽ gửi cho bạn một thông báo giả để xem nó có hoạt động không.",
+  "Waiting for input from browser interaction…": "Đang chờ đầu vào từ Trình duyệt tương tác",
   "Waiting for key…": "Đang chờ chìa khóa…",
   "Walked": "Đi bộ",
   "Wallpaper": "Hình nền",
@@ -1381,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Khi xác minh hai yếu tố được bật, bạn sẽ được nhắc nhập mã thông báo ngẫu nhiên, an toàn trong quá trình xác minh. Bạn có thể lấy mã thông báo này từ ứng dụng Google Authenticator trên điện thoại của mình.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Khi xác thực hai yếu tố được bật, bạn sẽ được nhắc nhập mã thông báo ngẫu nhiên, an toàn trong quá trình xác thực. Bạn có thể truy xuất mã thông báo này từ ứng dụng Authenticator trên điện thoại của mình.",
   "When was the loan made?": "Khoản vay được thực hiện khi nào?",
+  "When you are ready, authenticate using the button below:": "Khi bạn đã sẵn sàng, xác thực bằng cách sử dụng nút bên dưới:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Khi bạn xác định mối quan hệ giữa hai người liên hệ, chẳng hạn như mối quan hệ cha-con, Monica sẽ tạo hai mối quan hệ, một mối quan hệ cho mỗi người liên hệ:",
   "Which email address should we send the notification to?": "Chúng tôi nên gửi thông báo đến địa chỉ email nào?",
   "Who called?": "Ai đã gọi?",
